--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.3",
+    "path": "^0.12.7",
     "pg-promise": "^8.4.5"
   },
   "devDependencies": {
