--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.3",
     "path": "^0.12.7",
     "pg-promise": "^8.4.5"
