--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "method-override": "^3.0.0",
     "morgan": "^1.9.0",
     "node-fetch": "^2.2.0",
     "nodemon": "^1.18.3",
