--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon",
+    "dev": "nodemon server.js -e js,css,html",
     "debug": "nodemon --inspect-brk"
   },
   "repository": {
